[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-group"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
native_db = { workspace = true }
native_model = { workspace = true }
futures-util = { workspace = true }
rustls = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
tokio-rustls = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
pem = { workspace = true }
rcgen = { version = "0.13.1", optional = true, features = [
  "crypto",
  "pem",
  "x509-parser",
] }
x509-parser = { version = "0.17.0" }
rustls-pki-types = { version = "1.10.1", optional = true }
validator = { workspace = true }
regex = { workspace = true }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-database = { path = "../sandpolis-database", version = "0.0.1" }
sandpolis-core = { path = "../sandpolis-core", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }

[dev-dependencies]
# Used to test certificate authentication with a different backend
openssl = "0.10.71"

[features]
server = ["dep:rcgen", "dep:rustls-pki-types"]
