[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-health"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
native_db = { workspace = true }
native_model = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
inventory = { workspace = true }
axum = { workspace = true, optional = true }
axum-macros = { workspace = true, optional = true }
zbus = { workspace = true, optional = true }
bevy = { workspace = true, optional = true }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }
sandpolis-agent = { path = "../sandpolis-agent", version = "0.0.1", optional = true }
sandpolis-client = { path = "../sandpolis-client", version = "0.0.1", optional = true }

# Terminal (TUI/CLI) dependencies, excluded on Android
[target.'cfg(not(target_os = "android"))'.dependencies]
ratatui = { workspace = true, optional = true }

[dev-dependencies]
test-log = { version = "0.2.18", features = ["trace"] }
tokio = { workspace = true }

[features]
agent = ["dep:sandpolis-agent", "dep:zbus"]
client = [
  "sandpolis-instance/client",
  "dep:sandpolis-client",
  "sandpolis-client/client",
  "dep:bevy",
  "dep:ratatui",
]
server = ["sandpolis-instance/server"]
