[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-instance"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
native_db = { workspace = true }
native_model = { workspace = true }
os_info = { workspace = true }
sandpolis-database = { path = "../sandpolis-database", version = "0.0.1" }
sandpolis-core = { path = "../sandpolis-core", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }
serde = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[features]
agent = ["sandpolis-core/agent"]
client = ["sandpolis-core/client"]
server = ["sandpolis-core/server"]
