[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-instance"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
bevy = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
colored = { workspace = true, optional = true }
native_db = { workspace = true }
native_model = { workspace = true }
os_info = { workspace = true, optional = true }
sandpolis-database = { path = "../sandpolis-database", version = "0.0.1", optional = true }
sandpolis-core = { path = "../sandpolis-core", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }
serde = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[features]
default = ["dep:sandpolis-database", "dep:clap", "dep:colored", "dep:os_info"]
agent = ["sandpolis-core/agent"]
client = ["sandpolis-core/client"]
server = ["sandpolis-core/server"]
client-gui = ["dep:bevy"]
