[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-inventory"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, optional = true }
axum-macros = { workspace = true, optional = true }
serde = { workspace = true }
os_info = { workspace = true }
tracing = { workspace = true }
native_db = { workspace = true }
tokio = { workspace = true }
native_model = { workspace = true }
sysinfo = { version = "0.36.0", optional = true }
sandpolis-database = { path = "../sandpolis-database", version = "0.0.1" }
sandpolis-network = { path = "../sandpolis-network", version = "0.0.1" }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-core = { path = "../sandpolis-core", version = "0.0.1" }
sandpolis-agent = { path = "../sandpolis-agent", version = "0.0.1", optional = true }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }
sandpolis-client = { path = "../sandpolis-client", version = "0.0.1", optional = true }

# GUI dependencies
bevy = { workspace = true, optional = true }
bevy_egui = { workspace = true, optional = true }
inventory = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.15.0"
test-log = { version = "0.2.18", features = ["trace"] }

[features]
agent = ["dep:sysinfo", "dep:axum", "dep:axum-macros", "dep:sandpolis-agent"]
server = []
client = []
client-gui = [
  "client",
  "dep:bevy",
  "dep:bevy_egui",
  "dep:inventory",
  "dep:sandpolis-client",
  "sandpolis-client/client-gui",
]
client-tui = ["client"]
