[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-inventory"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
os_info = { workspace = true }
tracing = { workspace = true }
native_db = { workspace = true }
tokio = { workspace = true }
native_model = { workspace = true }
inventory = { workspace = true }
sysinfo = { version = "0.39.3", optional = true }
which = { version = "7", optional = true }
regex = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-agent = { path = "../sandpolis-agent", version = "0.0.1", optional = true }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }
sandpolis-client = { path = "../sandpolis-client", version = "0.0.1", optional = true }

# GUI dependencies
bevy = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.15.0"
test-log = { version = "0.2.18", features = ["trace"] }

[features]
agent = [
  "sandpolis-instance/agent",
  "dep:sysinfo",
  "dep:sandpolis-agent",
  "dep:which",
  "dep:regex",
  "dep:serde_json",
]
server = []
client = [
  "dep:bevy",
  "dep:sandpolis-client",
  "sandpolis-client/client",
]
