[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-mobile"
publish = false

# This version doesn't mean anything because this crate is just a wrapper
version = "0.0.1"

[lib]
name = "sandpolis_mobile"
crate-type = ["lib", "cdylib"]

[dependencies]
bevy = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
sandpolis = { path = "../sandpolis", version = "8.0.0", features = [
  "client",
  "client-gui",
  "agent",
] }
sandpolis-database = { path = "../sandpolis-database", version = "0.0.1" }
