[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-mobile"
publish = false

# This version doesn't mean anything because this crate is just a wrapper
version = "0.0.1"

[lib]
name = "sandpolis_mobile"
crate-type = ["lib", "cdylib"]

[dependencies]
bevy = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
sandpolis = { path = "../sandpolis", version = "8.0.0", default-features = false, features = [
  "client",
  "client-gui",
  "agent",
  "layer-desktop",
  "layer-inventory",
  "layer-wake",
  "layer-shell",
] }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }

# Android-specific dependencies
jni = "0.21"
ndk-context = "0.1"
