[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-network"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
axum-macros = { workspace = true }
axum = { workspace = true, optional = true }
bevy = { workspace = true, optional = true }
chrono = { workspace = true }
clap = { workspace = true }
cron = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
native_db = { workspace = true }
native_model = { workspace = true }
reqwest-websocket = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
sandpolis-core = { path = "../sandpolis-core", version = "0.0.1" }
sandpolis-database = { path = "../sandpolis-database", version = "0.0.1", optional = true }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }
sandpolis-realm = { path = "../sandpolis-realm", version = "0.0.1" }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde = { workspace = true }
tokio-util = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
url = { workspace = true }
validator = { workspace = true }

[features]
default = [
  "dep:reqwest",
  "dep:reqwest-websocket",
  "dep:sandpolis-database",
  "dep:tokio",
  "dep:tokio-util",
  "dep:axum",
]
agent = ["sandpolis-realm/agent"]
server = ["sandpolis-realm/server"]
client = ["sandpolis-realm/client"]
client-gui = ["dep:bevy"]
