[package]
name = "sandpolis-package"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[features]
agent = []
server = []
client = []
client-tui = ["client"]
client-gui = ["client"]
