[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-package"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[features]
agent = []
server = []
client = []
client-tui = ["client"]
client-gui = ["client"]
