[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-package"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
native_db = { workspace = true }
native_model = { workspace = true }
tracing = { workspace = true }
sandpolis-database = { path = "../sandpolis-database", version = "0.0.1" }
sandpolis-core = { path = "../sandpolis-core", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }

[features]
agent = []
server = []
client = []
client-tui = ["client"]
client-gui = ["client"]
