[package]
name = "sandpolis-power"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
ratatui = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
axum-macros = { workspace = true, optional = true }
sandpolis-instance = { path = "../sandpolis-instance" }
sandpolis-network = { path = "../sandpolis-network" }
sandpolis-client = { path = "../sandpolis-client" }
sandpolis-database = { path = "../sandpolis-database" }

[features]
agent = ["dep:axum", "dep:axum-macros"]
client = ["sandpolis-instance/client"]
client-gui = ["client"]
client-tui = ["client", "dep:ratatui", "sandpolis-client/client-tui"]
server = []
