[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-power"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
ratatui = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
axum-macros = { workspace = true, optional = true }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-network = { path = "../sandpolis-network", version = "0.0.1" }
sandpolis-client = { path = "../sandpolis-client", version = "0.0.1" }
sandpolis-database = { path = "../sandpolis-database", version = "0.0.1" }

[features]
agent = ["dep:axum", "dep:axum-macros"]
client = ["sandpolis-instance/client"]
client-gui = ["client"]
client-tui = ["client", "dep:ratatui", "sandpolis-client/client-tui"]
server = []
