[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-probe"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
wol-rs = { version = "1.1.0", optional = true }
vnc = { version = "0.4", optional = true }
russh = { workspace = true, optional = true }
ipmi-rs = { version = "0.4.0", optional = true }
rasn-snmp = { version = "0.26.5", optional = true }
arp-toolkit = { version = "0.3.2", optional = true }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }

[features]
agent = ["dep:wol-rs", "dep:vnc", "dep:russh"]
