[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-probe"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
macaddr = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
rups = { version = "0.6", optional = true }
vnc = { version = "0.4", optional = true }
russh = { workspace = true, optional = true }
ipmi-rs = { version = "0.5.0", optional = true }
rasn-snmp = { version = "0.28.13", optional = true }
arp-toolkit = { version = "0.3.2", optional = true }
retina = { version = "0.4", optional = true }
serde_cbor = { workspace = true, optional = true }
openh264 = { version = "0.9", optional = true }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }

# GUI dependencies
bevy = { workspace = true, optional = true }
bevy_svg = { workspace = true, optional = true, features = ["2d"] }
bevy_rapier2d = { workspace = true, optional = true }
inventory = { workspace = true, optional = true }
include_dir = { workspace = true, optional = true }
sandpolis-client = { path = "../sandpolis-client", version = "0.0.1", optional = true }

# Terminal (TUI/CLI) dependencies, excluded on Android
[target.'cfg(not(target_os = "android"))'.dependencies]
ratatui = { workspace = true, optional = true }

[dev-dependencies]
ron = { workspace = true }

[features]
agent = ["dep:rups", "dep:vnc", "dep:russh", "dep:retina", "dep:inventory"]
server = ["dep:rups", "dep:vnc", "dep:russh", "dep:retina", "dep:inventory"]
client = [
  "dep:bevy",
  "dep:bevy_svg",
  "dep:bevy_rapier2d",
  "dep:inventory",
  "dep:include_dir",
  "dep:openh264",
  "dep:serde_cbor",
  "dep:sandpolis-client",
  "dep:ratatui",
  "sandpolis-client/client",
]
