[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-realm"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
axum-server = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
clap = { workspace = true }
futures-util = { workspace = true }
native_db = { workspace = true }
native_model = { workspace = true }
pem = { workspace = true }
reqwest = { workspace = true, optional = true }
rustls = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
tokio-rustls = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tracing = { workspace = true }
rcgen = { version = "0.13.1", optional = true, features = [
  "crypto",
  "pem",
  "x509-parser",
] }
x509-parser = { version = "0.17.0" }
rustls-pki-types = { version = "1.10.1", optional = true }
validator = { workspace = true }
regex = { workspace = true }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-database = { path = "../sandpolis-database", version = "0.0.1", optional = true }
sandpolis-core = { path = "../sandpolis-core", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }

[dev-dependencies]
# Used to test certificate authentication with a different backend
openssl = "0.10.71"

[features]
default = ["dep:sandpolis-database"]
agent = ["sandpolis-core/agent", "dep:reqwest"]
client = ["sandpolis-core/client", "dep:reqwest"]
server = [
  "dep:rcgen",
  "dep:rustls-pki-types",
  "sandpolis-core/server",
  "dep:tokio",
  "dep:tokio-rustls",
  "dep:tower",
  "dep:axum",
  "dep:axum-server",
]
