[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-server"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
axum-macros = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
native_db = { workspace = true }
native_model = { workspace = true }
sandpolis-core = { path = "../sandpolis-core", version = "0.0.1" }
sandpolis-database = { path = "../sandpolis-database", version = "0.0.1" }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }
sandpolis-network = { path = "../sandpolis-network", version = "0.0.1" }
sandpolis-user = { path = "../sandpolis-user", version = "0.0.1" }
serde_bytes = { workspace = true }
serde_with = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
server = []
client = []
agent = []
