[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-server"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", optional = true }
aws-lc-rs = { workspace = true }
axum-extra = { workspace = true }
axum-macros = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
bevy = { workspace = true, optional = true }
chrono = { workspace = true }
clap = { workspace = true }
cron = { workspace = true }
futures = { workspace = true }
inventory = { workspace = true }
jsonwebtoken = { version = "9.3.0", optional = true }
native_db = { workspace = true }
native_model = { workspace = true }
passwords = { workspace = true, optional = true, features = [
  "common-password",
] }
png = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true }
totp-rs = { version = "5.6.0", optional = true, features = [
  "otpauth",
  "zeroize",
] }
tracing = { workspace = true }
url = { workspace = true }
validator = { workspace = true }

[features]
server = [
  "sandpolis-instance/server",
  "dep:argon2",
  "dep:totp-rs",
  "totp-rs?/gen_secret",
  "dep:jsonwebtoken",
  "dep:passwords",
]
client = [
  "sandpolis-instance/client",
  "dep:totp-rs",
  "totp-rs?/qr",
  "dep:argon2",
]
agent = ["sandpolis-instance/agent"]
client-tui = ["client"]
client-gui = ["client", "dep:bevy"]
