[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-shell"
version = "0.0.1"

[build-dependencies]
built = { version = "0.8", features = ["git2", "chrono", "semver"] }

[dependencies]
anyhow = { workspace = true }
axum-macros = { workspace = true }
axum = { workspace = true }
base64 = "0.22"
futures = { workspace = true, optional = true }
native_db = { workspace = true }
native_model = { workspace = true }
regex = { workspace = true }
sandpolis-agent = { path = "../sandpolis-agent", version = "0.0.1", optional = true }
sandpolis-client = { path = "../sandpolis-client", version = "0.0.1", optional = true }
sandpolis-core = { path = "../sandpolis-core", version = "0.0.1" }
sandpolis-database = { path = "../sandpolis-database", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }
sandpolis-network = { path = "../sandpolis-network", version = "0.0.1" }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tui-term = { version = "0.2.0", optional = true }
ratatui = { workspace = true, optional = true }

# GUI dependencies
bevy = { workspace = true, optional = true }
bevy_egui = { workspace = true, optional = true }
egui_console = { workspace = true, optional = true }
inventory = { workspace = true, optional = true }

[features]
agent = ["dep:futures", "dep:sandpolis-agent"]
server = []
client = []
client-gui = [
  "client",
  "dep:bevy",
  "dep:bevy_egui",
  "dep:egui_console",
  "dep:inventory",
  "dep:sandpolis-client",
  "sandpolis-client/client-gui",
]
client-tui = [
  "client",
  "dep:tui-term",
  "dep:ratatui",
  "dep:sandpolis-client",
  "sandpolis-client/client-tui",
]
