[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-shell"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
axum-macros = { workspace = true }
axum = { workspace = true }
base64 = "0.22"
futures = { workspace = true, optional = true }
native_db = { workspace = true }
native_model = { workspace = true }
regex = { workspace = true }
sandpolis-agent = { path = "../sandpolis-agent", version = "0.0.1", optional = true }
sandpolis-client = { path = "../sandpolis-client", version = "0.0.1", optional = true }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
serde = { workspace = true }
serde_cbor = { workspace = true, optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
tui-term = { version = "0.3.0", optional = true }
ratatui = { workspace = true, optional = true }

# GUI dependencies
bevy = { workspace = true, optional = true }
inventory = { workspace = true, optional = true }

[features]
agent = ["dep:futures", "dep:sandpolis-agent", "dep:inventory"]
server = []
client = ["dep:serde_cbor"]
client-gui = [
  "client",
  "dep:bevy",
  "dep:inventory",
  "dep:sandpolis-client",
  "sandpolis-client/client-gui",
]
client-tui = [
  "client",
  "dep:tui-term",
  "dep:ratatui",
  "dep:sandpolis-client",
  "sandpolis-client/client-tui",
]
