[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-snapshot"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, optional = true }
serde = { workspace = true }
uuid = { workspace = true }
qcow = { version = "1.2.0", optional = true }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }

[features]
server = ["dep:qcow", "dep:tokio"]
client = []
bootagent = []
agent = ["dep:tokio"]
