[package]
name = "sandpolis-sysinfo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
sysinfo = { version = "0.33.0", optional = true }
sandpolis-database = { path = "../sandpolis-database" }

[features]
agent = ["dep:sysinfo"]
client = []
client-gui = ["client"]
client-tui = ["client"]
