[package]
name = "sandpolis-sysinfo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
os_info = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true, optional = true }
axum-macros = { workspace = true, optional = true }
sysinfo = { version = "0.33.0", optional = true }
sandpolis-database = { path = "../sandpolis-database" }
sandpolis-network = { path = "../sandpolis-network" }
sandpolis-agent = { path = "../sandpolis-agent", optional = true }

[dev-dependencies]
tempfile = "3.15.0"

[features]
agent = ["dep:sysinfo", "dep:axum", "dep:axum-macros", "dep:sandpolis-agent"]
client = []
client-gui = ["client"]
client-tui = ["client"]
