[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-sysinfo"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
os_info = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true, optional = true }
axum-macros = { workspace = true, optional = true }
sysinfo = { version = "0.34.2", optional = true }
sandpolis-database = { path = "../sandpolis-database", version = "0.0.1" }
sandpolis-network = { path = "../sandpolis-network", version = "0.0.1" }
sandpolis-agent = { path = "../sandpolis-agent", version = "0.0.1", optional = true }

[dev-dependencies]
tempfile = "3.15.0"

[features]
agent = ["dep:sysinfo", "dep:axum", "dep:axum-macros", "dep:sandpolis-agent"]
server = []
client = []
client-gui = ["client"]
client-tui = ["client"]
