[package]
name = "sandpolis-user"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
ring = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
axum-extra = { workspace = true }
totp-rs = { version = "5.6.0", optional = true, features = [
  "otpauth",
  "zeroize",
] }
argon2 = { version = "0.5.3", optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
regex = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
sandpolis-network = { path = "../sandpolis-network" }
sandpolis-instance = { path = "../sandpolis-instance" }
sandpolis-database = { path = "../sandpolis-database" }
sandpolis-server = { path = "../sandpolis-server", optional = true }

[features]
server = [
  "dep:totp-rs",
  "totp-rs?/gen_secret",
  "dep:argon2",
  "dep:jsonwebtoken",
  "dep:sandpolis-server",
]
client = ["dep:totp-rs", "totp-rs?/qr", "dep:argon2"]
