[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-user"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
ring = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
axum-extra = { workspace = true }
totp-rs = { version = "5.6.0", optional = true, features = [
  "otpauth",
  "zeroize",
] }
argon2 = { version = "0.5.3", optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
regex = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
sandpolis-network = { path = "../sandpolis-network", version = "0.0.1" }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-database = { path = "../sandpolis-database", version = "0.0.1" }
sandpolis-server = { path = "../sandpolis-server", version = "0.0.1", optional = true }

[features]
server = [
  "dep:totp-rs",
  "totp-rs?/gen_secret",
  "dep:argon2",
  "dep:jsonwebtoken",
  "dep:sandpolis-server",
]
client = ["dep:totp-rs", "totp-rs?/qr", "dep:argon2"]
