[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-user"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
native_db = { workspace = true }
native_model = { workspace = true }
passwords = { workspace = true, optional = true, features = [
  "common-password",
] }
ring = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
axum-extra = { workspace = true }
totp-rs = { version = "5.6.0", optional = true, features = [
  "otpauth",
  "zeroize",
] }
argon2 = { version = "0.5.3", optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
regex = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
sandpolis-network = { path = "../sandpolis-network", version = "0.0.1" }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-database = { path = "../sandpolis-database", version = "0.0.1" }
sandpolis-core = { path = "../sandpolis-core", version = "0.0.1" }
sandpolis-realm = { path = "../sandpolis-realm", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }
serde_bytes = { workspace = true }

[features]
server = [
  "dep:totp-rs",
  "totp-rs?/gen_secret",
  "dep:argon2",
  "dep:jsonwebtoken",
  "dep:passwords",
]
client = ["dep:totp-rs", "totp-rs?/qr", "dep:argon2"]
agent = []
