[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-wake"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
ratatui = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
axum-macros = { workspace = true, optional = true }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }
sandpolis-client = { path = "../sandpolis-client", version = "0.0.1" }

[features]
agent = ["dep:axum", "dep:axum-macros"]
client = ["sandpolis-instance/client"]
client-gui = ["client"]
client-tui = ["client", "dep:ratatui", "sandpolis-client/client-tui"]
server = []
